@@ -851,6 +851,7 @@ libnautilus/Makefile
 libnautilus-adapter/Makefile
 libnautilus-extensions/Makefile
 nautilus-installer/Makefile
+nautilus-installer/package-list.xml
 nautilus-installer/libtrilobite/Makefile
 nautilus-installer/install-lib/Makefile
 nautilus-installer/src/Makefile
