@@ -1,3 +1,11 @@
+2001-02-27  Robin * Slomkowski  <rslomkow@rslomkow.org>
+
+	* configure.in: added rule for package-list.xml.in
+	* nautilus-installer/package-list.xml.in: added file
+	  to keep text for the installer.  This gets served by
+	  the server but it is needed to provide text for the
+	  installer. http://bugzilla.eazel.com/show_bug.cgi?id=3448
+
 2001-02-27  Gene Z. Ragan  <gzr@eazel.com>
 
 	reviewed by: Pavel Cisler <pavel@eazel.com>
